Fixed missing dash between member names under "Recent games" with teams of 3 people Removed spacing on team list

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -422,8 +422,6 @@ table.form {
 #bd table.teams .user {
   width: 0%;
   white-space: nowrap; }
-#bd table.teams .ranking {
-  padding-left: 20px; }
 #bd #graph {
   margin-top: 1.5em; }
   #bd #graph #chart {
